Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -79,3 +79,59 @@
 
 ## Запуск оболочек с помощью `su` и `sudo`
 
+Используя эти две похожие программы, мы можем получить определенные типы оболочек: 
+`su`  
+Измените ID пользователя или станьте суперпользователем (`root`). С помощью этой команды мы можем вызывать как оболочки входа, так и оболочки без входа: 
+* `su - user2`, `su -l user2` или `su --login user2` запустят интерактивную оболочку входа в систему как `user2`. * `su user2` запустит интерактивную оболочку без входа в систему как `user2`. 
+* `su - root` или `su` - запустит интерактивную оболочку входа в систему как `root`. 
+* `su root` или `su` запустит интерактивную оболочку без входа в систему от имени пользователя `root`. 
+
+`sudo`  
+Выполнять команды от имени другого пользователя (включая суперпользователя). Поскольку эта команда в основном используется для временного получения привилегий `root`, пользователь, использующий ее, должен находиться в файле `sudoers`. Чтобы добавить пользователей в `sudoers`, нам нужно стать `root`, а затем запустить:
+
+```console
+root@debian:~# usermod -aG sudo user2
+```
+
+Так же, как `su`, `sudo` позволяет нам вызывать как оболочки входа, так и оболочки без входа: 
+* `sudo su - user2`, `sudo su -l user2` или `sudo su --login user2` запустит интерактивную оболочку входа в систему как `user2`. 
+* `sudo su user2` запустит интерактивную оболочку без входа в систему как `user2`. 
+* `sudo -u user2 -s` запустит интерактивную оболочку без входа в систему как `user2`. 
+* `sudo su - root` или `sudo su` - запустит интерактивную оболочку входа в систему с правами `root`. 
+* `sudo -i` запустит интерактивную оболочку входа в систему с правами `root`. 
+* `sudo -i <some_command>` запустит интерактивную оболочку входа в систему от имени пользователя `root`, выполнит команду и вернется к исходному пользователю. 
+* `sudo su root` или `sudo su` запустит интерактивную оболочку без входа в систему с правами `root`. 
+* `sudo -s` или `sudo -u root -s` запустит оболочку без входа в систему с правами `root`. 
+
+При использовании `su` или `sudo` важно учитывать наш конкретный сценарий запуска новой оболочки: нужна ли нам среда целевого пользователя или нет? Если это так, мы бы использовали параметры, которые вызывают оболочки входа в систему; если нет, то те, которые вызывают оболочки без входа в систему.
+
+
+## Какой у нас тип оболочки?
+
+Чтобы узнать, с какой оболочкой мы работаем, мы можем ввести в терминал `echo $0` и получить следующий вывод: 
+Интерактивный вход  
+`-bash` или `-su` 
+
+Интерактивный без входа в систему  
+`bash` или `/bin/bash` 
+
+Неинтерактивный без входа в систему (скрипты)  
+`<name_of_script>`
+
+
+## Сколько у нас оболочек?
+
+Чтобы узнать, сколько оболочек `bash` запущено в системе, мы можем использовать команду `ps aux | grep bash`:
+
+```console
+user2@debian:~$ ps aux | grep bash
+user2       5270  0.1  0.1  25532  5664 pts/0    Ss   23:03   0:00 bash
+user2       5411  0.3  0.1  25608  5268 tty1     S+   23:03   0:00 -bash
+user2       5452  0.0  0.0  16760   940 pts/0    S+   23:04   0:00 grep --color=auto bash
+```
+
+`user2` в debian вошел в сеанс GUI (или X Window System) и открыл `gnome-terminal`, затем нажал <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F1</kbd>, чтобы войти в сеанс терминала `tty`. Наконец, она вернулась к сеансу графического интерфейса пользователя, нажав <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F7</kbd> и набрав команду `ps aux | grep bash`. Таким образом, вывод показывает интерактивную оболочку без входа через эмулятор терминала (`pts/0`) и интерактивную оболочку входа через соответствующий текстовый терминал (`tty1`). Также обратите внимание, что последнее поле каждой строки (команды) - это `bash` для первой и `-bash` для последней.
+
+
+## Откуда оболочки получают свою конфигурацию: файлы запуска
+
