Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -44,7 +44,7 @@
 Что *касается неинтерактивной оболочки без входа в систему*, то здесь нет ни взаимодействия, ни входа в систему от имени пользователя, поэтому здесь мы имеем в виду использование автоматизированных сценариев. Эти скрипты в основном используются для выполнения повторяющихся задач администрирования и обслуживания, например, тех, которые включены в cronjobs. В таких случаях `bash` не читает файлы запуска.
 
 
-## Открытие терминала
+### Открытие терминала
 
 Когда мы находимся в среде рабочего стола, мы можем либо открыть приложение терминала, либо переключиться на одну из системных консолей. Следовательно, новая оболочка является либо оболочкой `pts` при открытии из эмулятора терминала в графическом интерфейсе пользователя, либо оболочкой `tty` при запуске из системной консоли. В первом случае мы имеем дело не с терминалом, а с эмулятором терминала. В рамках графических сеансов эмуляторы терминалов, такие как *gnome-terminal* или *konsole*, очень многофункциональны и удобны для пользователя по сравнению с терминалами с текстовым интерфейсом пользователя. Менее функциональные эмуляторы терминала включают, среди прочего, *XTerm* и *sakura*. 
 
@@ -53,7 +53,7 @@
 >`tty` - телетайп; `pts` обозначает псевдотерминальное ведомое устройство. Для получения дополнительной информации: `man tty` и `man pts`
 
 
-## Запуск оболочек с помощью `bash`
+### Запуск оболочек с помощью `bash`
 
 После входа в систему введите `bash` в терминал, чтобы открыть новую оболочку. Технически эта оболочка является дочерним процессом текущей оболочки. 
 
@@ -77,7 +77,7 @@
 Ниже мы обсудим различные файлы запуска.
 
 
-## Запуск оболочек с помощью `su` и `sudo`
+### Запуск оболочек с помощью `su` и `sudo`
 
 Используя эти две похожие программы, мы можем получить определенные типы оболочек: 
 `su`  
@@ -106,7 +106,7 @@ root@debian:~# usermod -aG sudo user2
 При использовании `su` или `sudo` важно учитывать наш конкретный сценарий запуска новой оболочки: нужна ли нам среда целевого пользователя или нет? Если это так, мы бы использовали параметры, которые вызывают оболочки входа в систему; если нет, то те, которые вызывают оболочки без входа в систему.
 
 
-## Какой у нас тип оболочки?
+### Какой у нас тип оболочки?
 
 Чтобы узнать, с какой оболочкой мы работаем, мы можем ввести в терминал `echo $0` и получить следующий вывод: 
 Интерактивный вход  
@@ -119,7 +119,7 @@ root@debian:~# usermod -aG sudo user2
 `<name_of_script>`
 
 
-## Сколько у нас оболочек?
+### Сколько у нас оболочек?
 
 Чтобы узнать, сколько оболочек `bash` запущено в системе, мы можем использовать команду `ps aux | grep bash`:
 
@@ -133,5 +133,37 @@ user2       5452  0.0  0.0  16760   940 pts/0    S+   23:04   0:00 grep --color=
 `user2` в debian вошел в сеанс GUI (или X Window System) и открыл `gnome-terminal`, затем нажал <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F1</kbd>, чтобы войти в сеанс терминала `tty`. Наконец, она вернулась к сеансу графического интерфейса пользователя, нажав <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F7</kbd> и набрав команду `ps aux | grep bash`. Таким образом, вывод показывает интерактивную оболочку без входа через эмулятор терминала (`pts/0`) и интерактивную оболочку входа через соответствующий текстовый терминал (`tty1`). Также обратите внимание, что последнее поле каждой строки (команды) - это `bash` для первой и `-bash` для последней.
 
 
-## Откуда оболочки получают свою конфигурацию: файлы запуска
+### Откуда оболочки получают свою конфигурацию: файлы запуска
+
+Что ж, теперь, когда мы знаем типы оболочки, которые мы можем найти в системе Linux, самое время посмотреть, какие файлы запуска выполняются какой оболочкой. Обратите внимание, что общесистемные или глобальные сценарии помещаются в каталог `/etc/`, тогда как локальные или пользовательские сценарии находятся в домашней папке пользователя (`~`). Кроме того, при поиске более одного файла, как только один найден и запущен, остальные игнорируются. Исследуйте и изучайте эти файлы самостоятельно в своем любимом текстовом редакторе или набрав меньше `<startup_file>`.
+
+>Файлы запуска можно разделить на специфические для Bash (ограниченные только конфигурациями и командами `bash`) и общие (относящиеся к большинству оболочек).
+
+
+#### Интерактивная оболочка входа
+
+##### Глобальный уровень
+
+`/etc/profile`  
+Это общесистемный файл `.profile` для оболочки Bourne и совместимых с Bourne оболочек (включая `bash`). Посредством серии операторов `if` этот файл устанавливает ряд переменных, таких как `PATH` и `PS1` соответственно, а также источник - если они существуют - как файл `/etc/bash.bashrc`, так и те, что находятся в каталоге `/etc/profile.d`. 
+
+`/etc/profile.d/*`  
+Этот каталог может содержать сценарии, которые запускаются `/etc/profile`.
+
+
+##### Локальный уровень
+
+`~/.bash_profile`  
+Этот специальный файл Bash используется для настройки пользовательской среды. Его также можно использовать как источник `~/.bash_login` и `~/.profile`. 
+
+`~/.bash_login`  
+Также специфичен для Bash, этот файл будет выполняться только в том случае, если нет файла `~/.bash_profile`. Его название предполагает, что его следует использовать для выполнения команд, необходимых при входе в систему. 
+
+`~/.profile`  
+Этот файл не является специфичным для Bash и будет получен только в том случае, если не существует ни `~/.bash_profile`, ни `~/.bash_login`, что обычно имеет место. Таким образом, основная цель `~/.profile` - это проверка того, запущена ли оболочка Bash и - если да - поиск `~/.bashrc`, если он существует. Обычно он устанавливает переменную `PATH` так, чтобы она включала личный каталог пользователя `~/bin`, если он существует. 
+
+`~/.bash_logout`  
+Если он существует, этот специальный файл Bash выполняет некоторые операции очистки при выходе из оболочки. Это может быть удобно в таких случаях, как удаленные сеансы.
+
+##### Изучение файлов конфигурации интерактивной оболочки входа
 
