Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -17,14 +17,14 @@
 Точная серия файлов запуска зависит от очень важного параметра: типа оболочки. Давайте посмотрим на разнообразие существующих оболочек.
 
 
-## Типы оболочки: интерактивное против неинтерактивного и входа в систему против входа без входа
+## Типы оболочки: интерактивная против неинтерактивной и Login против Non-Login входа в систему
 
 Для начала давайте проясним концепции *интерактивности* и *входа* в систему в контексте оболочек: 
 
 Интерактивные/неинтерактивные оболочки  
 Этот вид оболочки относится к взаимодействию, которое происходит между пользователем и оболочкой: пользователь обеспечивает ввод, вводя команды в терминал с помощью клавиатуры; оболочка обеспечивает вывод, выводя сообщения на экран. 
 
-Оболочки входа/без входа  
+Login/Non-login оболочки  
 Этот вид оболочки относится к событию, когда пользователь обращается к компьютерной системе, предоставляя свои учетные данные, такие как имя пользователя и пароль. 
 
 Как интерактивные, так и неинтерактивные оболочки могут быть как для входа, так и без входа, и любая возможная комбинация этих типов имеет свое конкретное применение. 
@@ -35,7 +35,7 @@
 
 С другой стороны, *неинтерактивные оболочки* не требуют какого-либо взаимодействия с человеком. Таким образом, эти оболочки не запрашивают у пользователя ввод, а их вывод, если таковой имеется, в большинстве случаев записывается в журнал. 
 
-*Неинтерактивные оболочки входа в систему* довольно редки и непрактичны. Их использование практически не существует, и мы будем комментировать их только для понимания поведения оболочки. Некоторые странные примеры включают принудительный запуск сценария из оболочки входа с помощью `/bin/bash --login <some_script>` или передачу стандартного вывода (`stdout`) команды на стандартный ввод (`stdin`) ssh-соединения:
+*Неинтерактивные оболочки входа в систему* довольно редки и непрактичны. Их использование практически не существует, и мы будем комментировать их только для понимания поведения оболочки. Некоторые странные примеры включают принудительный запуск сценария из оболочки входа с помощью `/bin/bash --login <some_script>` или передачу стандартного вывода (*stdout*) команды на стандартный ввод (*stdin*`) ssh-соединения:
 
 ```console
 <some_command> | ssh <some_user>@<some_server>
@@ -48,7 +48,7 @@
 
 Когда мы находимся в среде рабочего стола, мы можем либо открыть приложение терминала, либо переключиться на одну из системных консолей. Следовательно, новая оболочка является либо оболочкой `pts` при открытии из эмулятора терминала в графическом интерфейсе пользователя, либо оболочкой `tty` при запуске из системной консоли. В первом случае мы имеем дело не с терминалом, а с эмулятором терминала. В рамках графических сеансов эмуляторы терминалов, такие как *gnome-terminal* или *konsole*, очень многофункциональны и удобны для пользователя по сравнению с терминалами с текстовым интерфейсом пользователя. Менее функциональные эмуляторы терминала включают, среди прочего, *XTerm* и *sakura*. 
 
-Используя комбинации <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F1</kbd>-<kbd>F6</kbd>, мы можем перейти к логинам консоли, которые открывают интерактивную текстовую оболочку входа. <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F7</kbd> вернет сеанс обратно на рабочий стол.
+Используя комбинации <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F1</kbd>-<kbd>F6</kbd>, мы можем перейти к входам в консоль, которые открывают интерактивную текстовую оболочку входа. <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F7</kbd> вернет сеанс обратно на рабочий стол.
 
 >`tty` - телетайп; `pts` обозначает псевдотерминальное ведомое устройство. Для получения дополнительной информации: `man tty` и `man pts`
 
@@ -80,14 +80,15 @@
 ### Запуск оболочек с помощью `su` и `sudo`
 
 Используя эти две похожие программы, мы можем получить определенные типы оболочек: 
+
 `su`  
-Измените ID пользователя или станьте суперпользователем (`root`). С помощью этой команды мы можем вызывать как оболочки входа, так и оболочки без входа: 
+Изменяет ID пользователя или становится суперпользователем (`root`). С помощью этой команды мы можем вызывать как оболочки с входом, так и оболочки без входа: 
 * `su - user2`, `su -l user2` или `su --login user2` запустят интерактивную оболочку входа в систему как `user2`. * `su user2` запустит интерактивную оболочку без входа в систему как `user2`. 
 * `su - root` или `su` - запустит интерактивную оболочку входа в систему как `root`. 
 * `su root` или `su` запустит интерактивную оболочку без входа в систему от имени пользователя `root`. 
 
 `sudo`  
-Выполнять команды от имени другого пользователя (включая суперпользователя). Поскольку эта команда в основном используется для временного получения привилегий `root`, пользователь, использующий ее, должен находиться в файле `sudoers`. Чтобы добавить пользователей в `sudoers`, нам нужно стать `root`, а затем запустить:
+Выполнять команды от имени другого пользователя(включая суперпользователя). Поскольку эта команда в основном используется для временного получения привилегий `root`, пользователь, использующий ее, должен находиться в файле `sudoers`. Чтобы добавить пользователей в `sudoers`, нам нужно стать `root`, а затем запустить:
 
 ```console
 root@debian:~# usermod -aG sudo user2
@@ -109,6 +110,7 @@ root@debian:~# usermod -aG sudo user2
 ### Какой у нас тип оболочки?
 
 Чтобы узнать, с какой оболочкой мы работаем, мы можем ввести в терминал `echo $0` и получить следующий вывод: 
+
 Интерактивный вход  
 `-bash` или `-su` 
 
@@ -130,14 +132,14 @@ user2       5411  0.3  0.1  25608  5268 tty1     S+   23:03   0:00 -bash
 user2       5452  0.0  0.0  16760   940 pts/0    S+   23:04   0:00 grep --color=auto bash
 ```
 
-`user2` в debian вошел в сеанс GUI (или X Window System) и открыл `gnome-terminal`, затем нажал <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F1</kbd>, чтобы войти в сеанс терминала `tty`. Наконец, она вернулась к сеансу графического интерфейса пользователя, нажав <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F7</kbd> и набрав команду `ps aux | grep bash`. Таким образом, вывод показывает интерактивную оболочку без входа через эмулятор терминала (`pts/0`) и интерактивную оболочку входа через соответствующий текстовый терминал (`tty1`). Также обратите внимание, что последнее поле каждой строки (команды) - это `bash` для первой и `-bash` для последней.
+`user2` в debian вошел в сеанс GUI (или X Window System) и открыл `gnome-terminal`, затем нажал <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F1</kbd>, чтобы войти в сеанс терминала `tty`. Наконец, он вернулся к сеансу графического интерфейса пользователя, нажав <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F7</kbd> и набрав команду `ps aux | grep bash`. Таким образом, вывод показывает интерактивную оболочку без входа через эмулятор терминала (`pts/0`) и интерактивную оболочку входа через соответствующий текстовый терминал (`tty1`). Также обратите внимание, что последнее поле каждой строки (команды) - это `bash` для первой и `-bash` для последней.
 
 
 ### Откуда оболочки получают свою конфигурацию: файлы запуска
 
-Что ж, теперь, когда мы знаем типы оболочки, которые мы можем найти в системе Linux, самое время посмотреть, какие файлы запуска выполняются какой оболочкой. Обратите внимание, что общесистемные или глобальные сценарии помещаются в каталог `/etc/`, тогда как локальные или пользовательские сценарии находятся в домашней папке пользователя (`~`). Кроме того, при поиске более одного файла, как только один найден и запущен, остальные игнорируются. Исследуйте и изучайте эти файлы самостоятельно в своем любимом текстовом редакторе или набрав меньше `<startup_file>`.
+Что ж, теперь, когда мы знаем типы оболочки, которые мы можем найти в системе Linux, самое время посмотреть, какие файлы запуска выполняются какой оболочкой. Обратите внимание, что общесистемные или глобальные сценарии помещаются в каталог `/etc/`, тогда как локальные или пользовательские сценарии находятся в домашней папке пользователя (`~`). Кроме того, при поиске более одного файла, как только один найден и запущен, остальные игнорируются. Исследуйте и изучайте эти файлы самостоятельно в своем любимом текстовом редакторе или набрав `less <startup_file>`.
 
->Файлы запуска можно разделить на специфические для Bash (ограниченные только конфигурациями и командами `bash`) и общие (относящиеся к большинству оболочек).
+>Файлы запуска можно разделить на специфические для Bash(ограниченные только конфигурациями и командами `bash`) и общие(относящиеся к большинству оболочек).
 
 
 #### Интерактивная оболочка входа
