Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -167,5 +167,201 @@ user2       5452  0.0  0.0  16760   940 pts/0    S+   23:04   0:00 grep --color=
 `~/.bash_logout`  
 Если он существует, этот специальный файл Bash выполняет некоторые операции очистки при выходе из оболочки. Это может быть удобно в таких случаях, как удаленные сеансы.
 
+
 ##### Изучение файлов конфигурации интерактивной оболочки входа
 
+Давайте продемонстрируем некоторые из этих файлов в действии, изменив `/etc/profile` и `/home/user2/.profile`. Мы добавим к каждой строке, напоминающей нам о выполняемом файле:
+
+```console
+root@debian:~# echo 'echo Hello from /etc/profile' >> /etc/profile
+root@debian:~# echo 'echo Hello from ~/.profile' >> ~/.profile
+```
+
+>Два оператора перенаправления `>>` добавляют вывод команды в существующий файл, но не перезаписывают его. Однако, если файл не существует, он будет создан.
+
+Таким образом, через вывод соответствующих `echo` команд мы узнаем, когда каждый из этих файлов будет прочитан и выполнен. Чтобы доказать это, давайте посмотрим, что происходит, когда `user2` входит в систему через `ssh` с другой машины:
+
+```console
+user2@debian:~$ ssh user2@192.168.1.6
+user2@192.168.1.6's password:
+Linux debian 4.9.0-8-amd64 #1 SMP Debian 4.9.130-2 (2018-10-27) x86_64
+
+The programs included with the Debian GNU/Linux system are free software;
+the exact distribution terms for each program are described in the
+individual files in /usr/share/doc/*/copyright.
+
+Debian GNU/Linux comes with ABSOLUTELY NO WARRANTY, to the extent
+permitted by applicable law.
+Last login: Tue Nov 27 19:57:19 2018 from 192.168.1.10
+Hello from /etc/profile
+Hello from /home/user2/.profile
+```
+
+Как показывают последние две строчки, это сработало. Также обратите внимание на три вещи: 
+
+* Сначала был запущен глобальный файл. 
+* В домашнем каталоге пользователя `user2` не было файлов `.bash_profile` или `.bash_login`. 
+* Тильда (`~`) заменяется на абсолютный путь к файлу (`/home/user2/.profile`).
+
+
+#### Интерактивная оболочка без входа
+
+##### Глобальный уровень
+
+`/etc/bash.bashrc`  
+Это общесистемный файл `.bashrc` для интерактивных оболочек `bash`. Посредством своего выполнения `bash` гарантирует, что он выполняется в интерактивном режиме, проверяет размер окна после каждой команды (при необходимости обновляя значения `LINES` и `COLUMNS`) и устанавливает некоторые переменные.
+
+
+##### Локальный уровень
+
+`~/.bashrc`  
+В дополнение к выполнению задач, аналогичных тем, которые описаны для `/etc/bash.bashrc` на уровне пользователя (например, проверка размера окна или запуск в интерактивном режиме), этот специальный файл Bash обычно устанавливает некоторые переменные истории и источники `~/.bash_aliases` если он существует. Кроме того, этот файл обычно используется для хранения конкретных псевдонимов и функций пользователей. 
+
+Также стоит отметить, что `~/.bashrc` читается, если `bash` обнаруживает, что его `<stdin>` является сетевым соединением (как это было в случае с соединением *Secure Shell* (SSH) в приведенном выше примере).
+
+
+##### Изучение интерактивных файлов конфигурации оболочки без входа в систему
+
+Давайте теперь изменим `/etc/bash.bashrc` и `/home/user2/.bashrc`:
+
+```console
+root@debian:~# echo 'echo Hello from /etc/bash.bashrc' >> /etc/bash.bashrc
+root@debian:~# echo 'echo Hello from ~/.bashrc' >> ~/.bashrc
+```
+
+И вот что происходит, когда `user2` запускает новую оболочку:
+
+```console
+user2@debian:~$ bash
+Hello from /etc/bash.bashrc
+Hello from /home/user2/.bashrc
+```
+
+И снова два файла были прочитаны и выполнены.
+
+>Помните, что из-за порядка, в котором файлы запускаются, локальные файлы имеют приоритет над глобальными.
+
+
+#### Неинтерактивная оболочка входа
+
+Неинтерактивная оболочка с параметрами `-l` или `--login` вынуждена вести себя как оболочка входа в систему, поэтому запускаемые файлы запуска будут такими же, как и файлы для интерактивных оболочек входа. 
+
+Чтобы доказать это, давайте напишем простой скрипт и сделаем его исполняемым. Мы не будем включать никаких shebang символов, потому что мы будем вызывать исполняемый файл bash (`/bin/bash` с параметром входа в систему) из командной строки. 
+
+1. Мы создаем сценарий `test.sh`, содержащий строку echo `'Hello from a script'`, чтобы мы могли доказать, что сценарий выполняется успешно:  
+```console
+user2@debian:~$ echo "echo 'Hello from a script'" > test.sh
+```
+2. Делаем наш скрипт исполняемым:  
+```console
+user2@debian:~$ chmod +x ./test.sh
+```
+3. Наконец, мы вызываем `bash` с параметром `-l` для запуска сценария:  
+```console
+user2@debian:~$ bash -l ./test.sh
+Hello from /etc/profile
+Hello from /home/user2/.profile
+Hello from a script
+```
+Оно работает! Перед запуском скрипта был выполнен вход в систему, и были выполнены как `/etc/profile`, так и `~/.profile`.
+
+>Мы узнаем о *shebang* и всех других аспектах написания сценариев оболочки в будущих уроках.
+
+Теперь у нас есть стандартный вывод (*stdout*) команды `echo` в стандартный ввод (*stdin*) `ssh` соединения с помощью конвейера (`|`):
+
+```console
+user2@debian:~$ echo "Hello-from-a-noninteractive-login-shell" | ssh user2@192.168.1.6
+Pseudo-terminal will not be allocated because stdin is not a terminal.
+user2@192.168.1.6's password:
+Linux debian 4.9.0-8-amd64 #1 SMP Debian 4.9.130-2 (2018-10-27) x86_64
+
+The programs included with the Debian GNU/Linux system are free software;
+the exact distribution terms for each program are described in the
+individual files in /usr/share/doc/*/copyright.
+
+Debian GNU/Linux comes with ABSOLUTELY NO WARRANTY, to the extent
+permitted by applicable law.
+Hello from /etc/profile
+Hello from /home/user2/.profile
+-bash: line 1: Hello-from-a-noninteractive-login-shell: command not found
+```
+
+Снова выполняются `/etc/profile` и `~/.profile`. В остальном первая и последняя строки вывода достаточно информативны, если речь идет о поведении оболочки.
+
+
+#### Неинтерактивная оболочка без входа в систему
+
+Сценарии не читают ни один из файлов, перечисленных выше, но ищут переменную среды `BASH_ENV`, при необходимости расширяют ее значение и используют в качестве имени файла запуска для чтения и выполнения команд. Мы узнаем больше о переменных среды в следующем уроке. 
+
+Как упоминалось выше, обычно `/etc/profile` и `~/.profile` обеспечивают выполнение и `/etc/bash.bashrc`, и `~/.bashrc` после успешного входа в систему. Результат следующей команды показывает это явление:
+
+```console
+root@debian:~# su - user2
+Hello from /etc/bash.bashrc
+Hello from /etc/profile
+Hello from /home/user2/.bashrc
+Hello from /home/user2/.profile
+```
+
+Принимая во внимание строки, которые мы ранее добавляли к сценариям запуска - и вызывая оболочку интерактивного входа на уровне пользователя с `su - user2` - четыре строки вывода можно объяснить следующим образом: 
+
+1. `Hello from /etc/bash.bashrc` означает, что `/etc/profile` получил `/etc/bash.bashrc`. 
+2. `Hello from /etc/profile` означает, что `/etc/profile` полностью прочитан и выполнен. 
+3. `Hello from /home/user2/.bashrc` означает, что `~/.profile` получил `~/.bashrc`. 
+4. `Hello from /home/user2/.profile` означает, что `~/.profile` полностью прочитан и выполнен. 
+
+Обратите внимание, как с `su - <username>` (также `su -l <username>` и `su --login <username>`) мы гарантируем вызов оболочки входа в систему, тогда как `su <username>` вызывал бы только `/etc/bash.bashrc` и `~/.bashrc`.
+
+
+### Источники файлов
+
+В предыдущих разделах мы обсуждали, что некоторые сценарии запуска включают или выполняют другие сценарии. Этот механизм называется поиском и объясняется в этом разделе.
+
+Точка (`.`) Обычно встречается в файлах запуска. 
+
+В файле `.profile` нашего сервера Debian мы можем найти, например, следующий блок:
+
+```console
+    # include .bashrc if it exists
+    if [ -f "$HOME/.bashrc" ]; then
+	. "$HOME/.bashrc"
+    fi
+```
+
+Мы уже видели, как выполнение одного сценария может привести к другому. Таким образом, оператор `if` гарантирует, что файл `$HOME/.bashrc` - если он существует (`-f`) - будет получен (т.е. прочитан и выполнен) при входе в систему:
+
+```console
+. "$HOME/.bashrc"
+```
+
+>Как мы узнаем в следующем уроке, `$HOME` - это переменная среды, которая расширяется до абсолютного пути к домашнему каталогу пользователя.
+
+Кроме того, мы можем использовать расширение `.` всякий раз, когда мы изменили файл запуска и хотим, чтобы изменения вступили в силу без перезагрузки. Например, мы можем:
+
+* добавьте псевдоним в `~/.bashrc`:
+```console
+user2@debian:~$ echo "alias hi='echo We salute you.'" >> ~/.bashrc
+```
+
+>При отправке вывода одной команды в файл не следует путать добавление (`>>`) с перезаписью (`>`).
+
+* выведите последнюю строку `~/.bashrc`, чтобы убедиться, что все прошло нормально:
+
+```console
+user2@debian:~$ tail -n 1 !$
+tail -n 1 ~/.bashrc
+alias hi='echo We salute you.'
+```
+
+> `!$` заменяется последним аргументом предыдущей команды, в нашем случае: `~/.bashrc`.
+
+* создайте файл вручную:
+```console
+user2@debian:~$ . ~/.bashrc
+```
+
+* и вызовите псевдоним, чтобы доказать, что он работает:
+```console
+user2@debian:~$ hi
+We salute you.
+```
