Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -365,3 +365,44 @@ user2@debian:~$ . ~/.bashrc
 user2@debian:~$ hi
 We salute you.
 ```
+
+>Обратитесь к следующему уроку, чтобы узнать о *псевдонимах* и *переменных*.
+
+
+#### Поиск файлов при помощи `source`
+
+Команда `source` является синонимом `.`. Итак, для источника `~/.bashrc` мы также можем сделать это следующим образом:
+
+```console
+user2@debian:~$ source ~/.bashrc
+```
+
+
+### Происхождение файлов запуска оболочки: `SKEL`
+
+`SKEL` - это переменная, значением которой является абсолютный путь к каталогу `skel`. Этот каталог служит шаблоном для структуры файловой системы домашних каталогов пользователей. Он включает файлы, которые будут унаследованы всеми созданными новыми учетными записями пользователей (включая, конечно же, файлы конфигурации для оболочек). `SKEL` и другие связанные переменные хранятся в `/etc/adduser.conf`, который является файлом конфигурации для `adduser`:
+
+```console
+user2@debian:~$ grep SKEL /etc/adduser.conf
+# The SKEL variable specifies the directory containing "skeletal" user
+SKEL=/etc/skel
+# If SKEL_IGNORE_REGEX is set, adduser will ignore files matching this
+SKEL_IGNORE_REGEX="dpkg-(old|new|dist|save)"
+```
+
+`SKEL` установлен в `/etc/skel`; таким образом, там лежат сценарии запуска, которые настраивают наши оболочки:
+
+```console
+user2@debian:~$ ls -a /etc/skel/
+.  ..  .bash_logout  .bashrc  .profile
+```
+
+>Помните, что файлы, начинающиеся с `.` скрыты, поэтому мы должны использовать `ls -a`, чтобы увидеть их при выводе списка содержимого каталога.
+
+Давайте теперь создадим каталог в `/etc/skel`, чтобы все новые пользователи могли хранить свои личные скрипты в: 
+
+1. Как `root` мы переходим в `/etc/skel`:
+```console
+root@debian:~# cd /etc/skel/
+root@debian:/etc/skel#
+```
