--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -406,3 +406,57 @@ user2@debian:~$ ls -a /etc/skel/
 root@debian:~# cd /etc/skel/
 root@debian:/etc/skel#
 ```
+
+2. Перечислим его содержимое:
+```console
+root@debian:/etc/skel# ls -a
+.  ..  .bash_logout  .bashrc  .profile
+```
+
+3. Создаем каталог и проверяем, все прошло как положено:
+```console
+root@debian:/etc/skel# mkdir my_personal_scripts
+root@debian:/etc/skel# ls -a
+.  ..  .bash_logout  .bashrc  my_personal_scripts  .profile
+```
+
+4. Теперь удаляем `user2` вместе с его домашним каталогом:
+```console
+root@debian:~# deluser --remove-home user2
+Looking for files to backup/remove ...
+Removing files ...
+Removing user `user2' ...
+Warning: group `user2' has no more members.
+Done.
+```
+
+5. Мы снова добавляем `user2`, чтобы он получил новый домашний каталог:
+```console
+root@debian:~# adduser user2
+Adding user `user2' ...
+Adding new group `user2' (1001) ...
+Adding new user `user2' (1001) with group `user2' ...
+Creating home directory `/home/user2' ...
+Copying files from `/etc/skel' ...
+Enter new UNIX password:
+Retype new UNIX password:
+passwd: password updated successfully
+Changing the user information for user2
+Enter the new value, or press ENTER for the default
+	Full Name []:
+	Room Number []:
+	Work Phone []:
+	Home Phone []:
+	Other []:
+Is the information correct? [Y/n] y
+```
+
+6. Наконец, мы входим в систему как `user2` и перечисляем все файлы в `/home/user2`, чтобы убедиться, что все прошло так, как ожидалось:
+```console
+root@debian:~# su - user2
+user2@debian:~$ pwd
+/home/user2
+user2@debian:~$ ls -a
+.  ..  .bash_history  .bash_logout  .bashrc  my_personal_scripts  .profile
+```
+Это было так.
