Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -460,3 +460,34 @@ user2@debian:~$ ls -a
 .  ..  .bash_history  .bash_logout  .bashrc  my_personal_scripts  .profile
 ```
 Это было так.
+
+
+# Упражнения для закрепления
+
+1. Изучите, как были запущены оболочки, в столбце «Shell Started with…» и укажите необходимую информацию:
+| Оболочка запустилась с...| Интерактивный | Вход в систему | Результат вывода `echo $0` |
+|--------------------------|---------------|----------------|----------------------------|
+| `sudo ssh user2@machine2`|               |                |                            |
+| <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F2</kbd> ||           |                            |    
+| `su - user2`             |               |                |                            |
+| `gnome-terminal`         |               |                |                            |
+| Обычный пользователь использует *консоль* для запуска экземпляра *sakura* |||          |
+| Скрипт с именем `test.sh`, содержащий команду `echo $0` |||                            |
+
+
+## Упражнения на размышление
+
+
+
+
+## Резюме
+
+
+
+
+## Ответы на упражнения для закрепления
+
+
+
+
+## Ответы на упражнения для размышления
