Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -474,6 +474,28 @@ user2@debian:~$ ls -a
 | Обычный пользователь использует *консоль* для запуска экземпляра *sakura* |||          |
 | Скрипт с именем `test.sh`, содержащий команду `echo $0` |||                            |
 
+2. Напишите команды `su` и `sudo` для запуска указанной оболочки:  
+Оболочка интерактивного входа в систему как `user2`  
+`su`:  
+`sudo`:  
+Интерактивная оболочка входа в систему с правами `root`  
+`su`:  
+`sudo`:  
+Интерактивная оболочка без входа в систему с правами `root`  
+`su`:  
+`sudo`:  
+Интерактивная оболочка без входа в систему как `user2`  
+`su`:  
+`sudo`:
+
+3. Какой файл запуска читается при запуске оболочки в разделе «Тип оболочки»?
+| Тип оболочки | `/etc/profile` | `/etc/bash.bashrc` | `~/.profile` | `~/.bashrc` |
+|--------------|----------------|--------------------|--------------|-------------|
+| Оболочка интерактивного входа в систему как `user2` |||           |             |
+| Интерактивная оболочка входа в систему с правами `root` |||       |             |    
+| Интерактивная оболочка без входа в систему с правами `root` |||   |             | 
+| Интерактивная оболочка без входа в систему как `user2` |||        |             |
+
 
 ## Упражнения на размышление
 
