Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -499,12 +499,108 @@ user2@debian:~$ ls -a
 
 ## Упражнения на размышление
 
+1. В Bash мы можем написать простой `Hello world!` функцию, включив следующий код в пустой файл:
+```console
+function hello() {
+	 echo "Hello world!"
+}
+```
+* Что нам делать дальше, чтобы функция стала доступной для оболочки? 
+* Когда он станет доступным для текущей оболочки, как вы его вызовете? 
+* Чтобы автоматизировать процесс, в какой файл вы поместите функцию и ее вызов, чтобы она запускалась, когда `user2` открывает терминал из сеанса X Window? Какой это тип оболочки? 
+* В какой файл вы поместите функцию и ее вызов, чтобы она запускалась, когда `root` запускает новую интерактивную оболочку, независимо от того, является ли это логином или нет?
 
+2. Взгляните на следующий базовый вариант `Hello world!` сценарий bash:
+```console
+#!/bin/bash
+
+#hello_world: a simple bash script to discuss interaction in scripts.
+
+echo "Hello world!"
+```
+* Предположим, мы делаем скрипт исполняемым и запускаем его. Это будет интерактивный сценарий? Почему? 
+* Что делает сценарий интерактивным?
+
+3. Представьте, что вы изменили значения некоторых переменных в `~/.bashrc` и хотите, чтобы эти изменения вступили в силу без перезагрузки. Как можно добиться этого из домашнего каталога двумя разными способами? 
+
+4. Джон только что начал сеанс X Window на сервере Linux. Он открывает эмулятор терминала для выполнения некоторых административных задач, но, что удивительно, сеанс зависает, и ему нужно открыть текстовую оболочку. * * Как он может открыть эту оболочку `tty`? 
+* Какие файлы запуска будут получены? 
+
+5. Линда - пользователь Linux-сервера. Она любезно просит администратора иметь файл `~/.bash_login`, чтобы она могла печатать время и дату на экране при входе в систему. Другим пользователям нравится эта идея, и они следуют ее примеру. Администратору сложно создать файл для всех остальных 5 пользователей на сервере, поэтому он решает добавить новую политику и создать `~/.bash_login` для всех потенциальных новых пользователей. Как администратор может выполнить эту задачу?
 
 
 ## Резюме
 
+На этом уроке мы узнали: 
 
+* Оболочки задают среду пользователя в системе Linux. 
+* *Bash* - оболочка номер один в дистрибутивах GNU/Linux. 
+* Первым делом, выполняемым оболочкой, является чтение и выполнение одного или нескольких файлов запуска. 
+* Понятия *взаимодействия* и *входа* в систему применительно к оболочкам. 
+* Как запускать различные типы оболочек с помощью `bash`, `su`, `sudo` и <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F1</kbd>-<kbd>F6</kbd>. 
+* Как проверить тип оболочки с помощью `echo $0`. 
+* Локальные файлы запуска `~/.bash_profile`, `~/.profile`, `~/.bash_login`, `~/.bash_logout` и `~/.bashrc`. 
+* Глобальные файлы запуска `/etc/profile`, `/etc/profile.d/*`, `/etc/bash.bashrc`. 
+* Локальные файлы имеют приоритет над глобальными. 
+* Как перенаправить вывод команды с помощью `>` (перезаписать) и `>>` (добавить). 
+* Значение каталога `skel`. 
+* Как получить файлы. 
+ 
+Команды, используемые в этом уроке: 
+
+`bash`  
+Создайте новую оболочку. 
+
+`su`  
+Создайте новую оболочку. 
+
+`sudo`  
+Создайте новую оболочку. 
+
+`usermod`  
+Измените учетную запись пользователя. 
+
+`echo`  
+Отобразите строку текста. 
+
+`ps`  
+Сообщите снимок текущих процессов. 
+
+`less`  
+Пейджер для длинных файлов. 
+
+`ssh`  
+Запустите открытое SSH-соединение (удаленно). 
+
+`chmod`  
+Измените биты режима файла, например сделайте его исполняемым. 
+
+`grep`  
+Распечатайте строки, соответствующие шаблону. 
+
+`ls`  
+Список содержимого каталога. 
+
+`cd`  
+Сменить каталог. 
+
+`mkdir`  
+Сделайте каталог. 
+
+`deluser`  
+Удалить пользователя. 
+
+`adduser`  
+Добавить нового пользователя. 
+
+`.`  
+Исходный файл. 
+
+`source`  
+Исходный файл. 
+
+`tail`  
+Выведите последнюю часть файлов.
 
 
 ## Ответы на упражнения для закрепления
