--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -549,43 +549,43 @@ echo "Hello world!"
 Команды, используемые в этом уроке: 
 
 `bash`  
-Создайте новую оболочку. 
+Создать новую оболочку. 
 
 `su`  
-Создайте новую оболочку. 
+Создать новую оболочку. 
 
 `sudo`  
-Создайте новую оболочку. 
+Создать новую оболочку. 
 
 `usermod`  
-Измените учетную запись пользователя. 
+Изменить учетную запись пользователя. 
 
 `echo`  
-Отобразите строку текста. 
+Отобразить строку текста. 
 
 `ps`  
-Сообщите снимок текущих процессов. 
+Вывод снимок текущих процессов. 
 
 `less`  
-Пейджер для длинных файлов. 
+Пагинатор для длинных файлов. 
 
 `ssh`  
-Запустите открытое SSH-соединение (удаленно). 
+Запускает открытое SSH-соединение (удаленно). 
 
 `chmod`  
-Измените биты режима файла, например сделайте его исполняемым. 
+Изменить биты режима файла, например сделает его исполняемым. 
 
 `grep`  
-Распечатайте строки, соответствующие шаблону. 
+Вывести строки, соответствующие шаблону. 
 
 `ls`  
 Список содержимого каталога. 
 
 `cd`  
-Сменить каталог. 
+Сменить текущий каталог. 
 
 `mkdir`  
-Сделайте каталог. 
+Создать каталог. 
 
 `deluser`  
 Удалить пользователя. 
@@ -600,7 +600,7 @@ echo "Hello world!"
 Исходный файл. 
 
 `tail`  
-Выведите последнюю часть файлов.
+Вывести последнюю часть файлов.
 
 
 ## Ответы на упражнения для закрепления
